--- a/website/src/content/docs/index.mdx
+++ b/website/src/content/docs/index.mdx
@@ -1,6 +1,11 @@
-# App Compose
+---
+title: Introduction
+description: App Compose — a tool for creating scalable, module-based applications with ease.
+---
 
-Create scalable, module-based applications with ease.
+import { Tabs, TabItem } from '@astrojs/starlight/components';
+
+App Compose — a tool for creating scalable, module-based applications with ease.
 
 ## Motivation
 
@@ -75,16 +80,22 @@ The library offers convenient functions for creating and composing modules into 
 - Ensures high performance, suitable for **scalable applications**.
 - Follows **semantic versioning** (semver), guaranteeing **stability** and **predictability** of changes with each release.
 
-## Install
+## Installation
 
-```sh
-npm i @grlt-hub/app-compose
-# Or Yarn
-yarn add @grlt-hub/app-compose
-# Or pnpm
-pnpm add @grlt-hub/app-compose
-```
-
-## Documentation
-
-For additional information, guides and api reference visit our [documentation site]()
+<Tabs>
+  <TabItem label="npm">
+  ```sh [npm]
+    npm i @grlt-hub/app-compose
+  ```
+  </TabItem>
+  <TabItem label="yarn">
+  ```sh [yarn]
+    yarn add @grlt-hub/app-compose
+  ```
+  </TabItem>
+   <TabItem label="pnpm">
+  ```sh [pnpm]
+   pnpm add @grlt-hub/app-compose
+  ```
+  </TabItem>
+</Tabs>
