--- a/website/src/content/docs/tutorials/basic-usage.mdx
+++ b/website/src/content/docs/tutorials/basic-usage.mdx
@@ -6,7 +6,7 @@ sidebar:
 
 In this section, we will create a simple container using `createContainer` and run it with `compose.up`. This example will show you how to quickly get started with the library and understand its basic principles.
 
-The container we create will include an identifier and an `onStart` function that runs upon initialization. You will see how `compose.up` brings containers together and manages their execution.
+The container we create will include an identifier and an `start` function that runs upon initialization. You will see how `compose.up` brings containers together and manages their execution.
 
 ## Example
 
@@ -17,7 +17,7 @@ import { createContainer, compose } from '@grlt-hub/app-compose';
 
 const user = createContainer({
   id: 'user', // Each container's id must be unique to avoid conflicts
-  onStart: () => {
+  start: () => {
     console.log('User container started');
     return { api: null };
   },
