added: handle aysnc ops

--- a/website/src/content/docs/how-to-guides/handle-asynchronous-operations.mdx
+++ b/website/src/content/docs/how-to-guides/handle-asynchronous-operations.mdx
@@ -106,7 +106,7 @@ const settingsContainer = createContainer({
 await compose.up([configContainer, settingsContainer]);
 ```
 
-##### Expected Result
+#### Expected Result
 
 Using `await compose.up`, you ensure that both `configContainer` and `settingsContainer` have completed before proceeding:
 
