added: a part of a doc for react

--- a/website/src/content/docs/how-to-guides/use-with-react.mdx
+++ b/website/src/content/docs/how-to-guides/use-with-react.mdx
@@ -64,3 +64,5 @@ await compose.up([logoContainer, layoutContainer]);
 ### Limitations of This Approach
 
 This approach works well for pages with a relatively simple component structure and minimal nesting. However, for more complex setups with deeply nested components, you might need a higher level of flexibility. To achieve this, you can use a slot-based concept, which is not natively available in React but is supported by the `grlt-hub` ecosystem through the [@grlt-hub/react-slots](https://github.com/grlt-hub/react-slots) package.
+
+## Example Using Slots
