--- a/website/src/content/docs/index.mdx
+++ b/website/src/content/docs/index.mdx
@@ -77,3 +77,7 @@ The library offers convenient functions for creating and composing modules into 
 - Covered by **100% tests**, including **type tests**.
 - Ensures high performance, suitable for **scalable applications**.
 - Follows **semantic versioning** (semver), guaranteeing **stability** and **predictability** of changes with each release.
+
+## Community
+
+- [Telegram](https://t.me/grlt_hub_app_compose)
