added: disc link

--- a/website/src/content/docs/index.mdx
+++ b/website/src/content/docs/index.mdx
@@ -80,4 +80,5 @@ The library offers convenient functions for creating and composing modules into 
 
 ## Community
 
+- [Discord](https://discord.gg/Q4DFKnxp)
 - [Telegram](https://t.me/grlt_hub_app_compose)
