--- a/website/src/content/docs/index.mdx
+++ b/website/src/content/docs/index.mdx
@@ -7,11 +7,13 @@ App Compose — a tool for creating scalable, module-based applications with eas
 
 ## Motivation
 
-Modern applications require a modular structure to ensure **flexibility** and adapt to **business needs**. Building a truly modular system inevitably brings the challenge of bringing all components together. In this process, it’s critical to manage the **connection flow**: loading one module first, then another, while controlling their dependencies. Complexity increases when it becomes necessary to disable parts of the system **without leaving traces** in the code (such as `if/else` statements) and **without disrupting** the operation of other components.
-
-`app-compose` provides the ability not only to flexibly **disable modules on demand** but also to completely exclude their code from loading when they are turned off. Moreover, all dependencies of a disabled module are also automatically excluded, which helps **save resources** and maintain high **application performance**.
+Modern applications thrive on modular architecture, adapting seamlessly to evolving business needs. To achieve **true modularity**, though, you need more than just independent components—you need an **efficient** way to bring them together. This means **controlling** how modules load, in what order, and with which dependencies. It gets even trickier when you want to turn off parts of the system **without any traces** in the code, like `if/else` statements, and without affecting the **stability** of other components.
 
 ## How does this library solve this problem?
+
+`app-compose` is designed to make this seamless. It lets you dynamically enable or disable modules as needed, not only preventing their code from loading when they’re off but also excluding all related dependencies. This means no excess resource use and optimized **performance**, even as the app grows.
+
+With `app-compose`, you can **scale** your applications effortlessly—whether you’re building a lightweight tool or a complex, feature-rich system. By managing dependency flow and on-demand module loading, `app-compose` provides the control you need to build applications that are both **flexible and robust**.
 
 ### Example
 
