added: part of Strengths

--- a/website/src/content/docs/index.mdx
+++ b/website/src/content/docs/index.mdx
@@ -79,7 +79,7 @@ The library offers convenient functions for creating and composing modules into 
 - Covered by **100% tests**, including **type tests**.
 - Ensures high performance, suitable for **scalable applications**.
 - Includes **debugging tools** to facilitate the development process.
-- Features **compose.graph** for visualizing and managing the system composed of containers effectively.
+- Offers the ability to **visualize and manage** the system composed of containers effectively.
 - Follows **semantic versioning** (semver), guaranteeing **stability** and **predictability** of changes with each release.
 
 ## Community
