--- a/website/src/content/docs/how-to-guides/visualize-the-system.mdx
+++ b/website/src/content/docs/how-to-guides/visualize-the-system.mdx
@@ -2,6 +2,9 @@
 title: Visualize the System
 sidebar:
   order: 9
+  badge:
+    text: New
+    variant: tip
 ---
 
 Visualizing the system composed of containers is crucial for understanding dependencies and interactions within your application. Here’s how to effectively use the visualization tool.
