--- a/website/src/content/docs/reference/compose-graph.mdx
+++ b/website/src/content/docs/reference/compose-graph.mdx
@@ -2,6 +2,9 @@
 title: compose.graph
 sidebar:
   order: 2
+  badge:
+    text: New
+    variant: tip
 ---
 
 `compose.up` is the primary function used to visualize the system composed of containers.
