--- a/website/src/content/docs/index.mdx
+++ b/website/src/content/docs/index.mdx
@@ -75,7 +75,7 @@ The library offers convenient functions for creating and composing modules into 
 
 - Provides a **simple and intuitive developer experience (DX)**.
 - Designed with a focus on **quality** and **performance**.
-- Weighs less than **1.6 kB**, making it lightweight.
+- Weighs less than **1.6 kB** (runtime), making it lightweight.
 - Covered by **100% tests**, including **type tests**.
 - Ensures high performance, suitable for **scalable applications**.
 - Includes **debugging tools** to facilitate the development process.
