added: upd references

--- a/website/src/content/docs/reference/compose-graph.mdx
+++ b/website/src/content/docs/reference/compose-graph.mdx
@@ -22,6 +22,8 @@ compose.graph(containers: AnyContainer[]): Record<AnyContainer['id'], {
 ## Parameters
 
 - **containers** (`Container[]`): An array of containers to visualize.
+- **config** (optional, `{ debug?: boolean, apis?: boolean, autoResolveDeps?: { strict: true, optional?: boolean } }`): An optional configuration object with the following properties:
+  - **autoResolveDeps** (`{ strict: true, optional?: boolean }`): Allows automatic resolution of dependencies. If `strict` is set to `true`, all strict dependencies are resolved automatically. The `optional` property, if set to `true`, enables automatic resolution of optional dependencies as well, eliminating the need to manually pass them to `compose.up`.
 
 ## Return Value
 
